# cruise

./: pyproject.toml  read_entries.py
app/: main.py  models.py
app/static/: style.css
app/templates/: index.html
